feat: 新增Swagger风格的可视化API文档页面
本次提交为插件添加了完整的Swagger风格API文档页面，支持通过Jenkins侧边栏入口访问：
1. 实现了在线Try it out功能，可直接调试API接口
2. 包含完整的参数说明、cURL示例和响应示例
3. 为所有接口添加权限徽章展示所需权限
4. 支持中英双语自动适配Jenkins语言环境
5. 在插件主页面新增API文档快捷访问入口
6. 重构了API路由注册方式，优化了部分代码逻辑